# streamFi-contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
contracts/factory/: Cargo.toml
contracts/factory/src/: deploy.rs  errors.rs  governance.rs  lib.rs  pause.rs  query.rs  storage.rs  ttl.rs
contracts/governor/: Cargo.toml
contracts/governor/src/: auth.rs  config.rs  errors.rs  lib.rs  role.rs  storage.rs  ttl.rs
contracts/stream/: Cargo.toml
contracts/stream/src/: errors.rs  events.rs  lib.rs  math.rs  state.rs  storage.rs  tests.rs  ttl.rs  yield_integration.rs
docs/: architecture.md  security.md
docs/adr/: 001-per-contract-per-stream.md  002-cancel-settles-atomically.md
scripts/: deploy.sh  query.sh  upgrade.sh
src/: lib.rs  oracle.rs
tests/: audit_round_2_regression.rs  factory_deploy.rs  factory_pause.rs  governor_config.rs  governor_rbac.rs  stream_clawback.rs  stream_lifecycle.rs  stream_pause_resume.rs  yield_rebate.rs
